--- a/constraint-validation.html
+++ b/constraint-validation.html
@@ -34,7 +34,7 @@
             class="form-control validate-input"
             type="text"
             name="last-name"
-            required
+            minlength="2"
           />
           <small class="error" aria-live="polite"></small>
         </div>
