first name field has minimum of 2 added form validation css file

--- a/constraint-validation.html
+++ b/constraint-validation.html
@@ -22,7 +22,7 @@
             class="form-control validate-input"
             type="text"
             name="first-name"
-            
+            minlength="2"
           />
           <small class="error" aria-live="polite"></small>
         </div>
