made email required

--- a/constraint-validation.html
+++ b/constraint-validation.html
@@ -46,6 +46,7 @@
             class="form-control validate-input"
             type="email"
             name="email"
+            required
           />
           <small class="error" aria-live="polite"></small>
         </div>
