max length for first and last name

--- a/constraint-validation.html
+++ b/constraint-validation.html
@@ -23,6 +23,7 @@
             type="text"
             name="first-name"
             minlength="2"
+            maxlength="50"
           />
           <small class="error" aria-live="polite"></small>
         </div>
@@ -35,6 +36,7 @@
             type="text"
             name="last-name"
             minlength="2"
+            maxlength="50"
           />
           <small class="error" aria-live="polite"></small>
         </div>
