max length for email

--- a/constraint-validation.html
+++ b/constraint-validation.html
@@ -49,6 +49,7 @@
             type="email"
             name="email"
             required
+            maxlength="50"
           />
           <small class="error" aria-live="polite"></small>
         </div>
