100 doge coin is added per click

--- a/constraint-validation.html
+++ b/constraint-validation.html
@@ -79,7 +79,7 @@
 
         <div class="form-group">
           <label for="doge">How much DogeCoin u donate me?</label>
-          <input type="number" id="doge" min=20>
+          <input type="number" id="doge" min=20 step="100">
         </div>
 
         <div class="form-group">
