--- a/contact-me.html
+++ b/contact-me.html
@@ -2,9 +2,77 @@
 <html>
   <head>
     <title>Contact Me</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="form-validation.css" />
   </head>
 
   <body>
-    <!-- TODO -->
+    <div class="container">
+      <h1>Connect With Us</h1>
+      <form id="connect-form" action="">
+        <div class="form-group">
+          <label for="name">Name</label>
+          <input
+            id="name"
+            class="form-control validate-input"
+            type="text"
+            name="name"
+            required
+          />
+          <small class="error" aria-live="polite"></small>
+        </div>
+
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input
+            id="email"
+            class="form-control validate-input"
+            type="email"
+            name="email"
+          />
+          <small class="error" aria-live="polite"></small>
+        </div>
+
+        <div class="form-group">
+          <label for="reason">Reason for contacting</label>
+          <select class="form-control" name="reason" id="contact-reason">
+            <option value="choose" selected="selected" disabled>
+              Choose one
+            </option>
+            <option value="Job opportunity">Job opportunity</option>
+            <option value="Talk code">Talk code</option>
+          </select>
+          <small class="error" aria-live="polite"></small>
+        </div>
+
+        <div class="form-group">
+          <label for="kind">Coding language</label>
+          <select class="form-control" name="kind" id="contact-kind">
+            <option value="choose" selected="selected" disabled>
+              Choose one
+            </option>
+            <option value="JavaScript">JavaScript</option>
+            <option value="C#">C#</option>
+          </select>
+          <small class="error" aria-live="polite"></small>
+        </div>
+
+        <div class="form-group">  
+          <label for="message">Message</label>
+          <textarea id="message"></textarea>
+        </div>
+
+        <div class="form-group">
+          <input class="btn btn-primary" type="submit" value="Sign up" />
+        </div>
+      </form>
+    </div>
+
+    <script src="contact-me.js"></script>
   </body>
 </html>
