--- a/contact-me.html
+++ b/contact-me.html
@@ -18,10 +18,10 @@
         <div class="form-group">
           <label for="name">Name</label>
           <input
-            id="name"
+            id="contact-name"
             class="form-control validate-input"
             type="text"
-            name="name"
+            name="contact-name"
             required
           />
           <small class="error" aria-live="polite"></small>
@@ -30,10 +30,11 @@
         <div class="form-group">
           <label for="email">Email</label>
           <input
-            id="email"
+            id="contact-email"
             class="form-control validate-input"
             type="email"
             name="email"
+            required
           />
           <small class="error" aria-live="polite"></small>
         </div>
@@ -51,8 +52,8 @@
         </div>
 
         <div class="form-group">
-          <label for="kind">Coding language</label>
-          <select class="form-control" name="kind" id="contact-kind">
+          <label for="language">Coding language</label>
+          <select class="form-control" name="language" id="code-language">
             <option value="choose" selected="selected" disabled>
               Choose one
             </option>
@@ -64,7 +65,12 @@
 
         <div class="form-group">  
           <label for="message">Message</label>
-          <textarea id="message"></textarea>
+          <textarea 
+            name="message" 
+            id="message"
+            required
+          >
+          </textarea>
         </div>
 
         <div class="form-group">
