--- a/contact-me.html
+++ b/contact-me.html
@@ -14,7 +14,7 @@
   <body>
     <div class="container">
       <h1>Connect With Us</h1>
-      <form id="connect-form" action="">
+      <form id="contact-me-form" action="">
         <div class="form-group">
           <label for="name">Name</label>
           <input
@@ -28,7 +28,7 @@
         </div>
 
         <div class="form-group">
-          <label for="email">Email</label>
+          <label for="contact-email">Email</label>
           <input
             id="contact-email"
             class="form-control validate-input"
@@ -40,7 +40,7 @@
         </div>
 
         <div class="form-group">
-          <label for="reason">Reason for contacting</label>
+          <label for="contact-reason">Reason for contacting</label>
           <select class="form-control" name="reason" id="contact-reason">
             <option value="choose" selected="selected" disabled>
               Choose one
@@ -58,7 +58,6 @@
             class="form-control validate-input"
             type="text"
             name="job"
-            required
           />
           <small class="error" aria-live="polite"></small>
         </div>
@@ -70,7 +69,6 @@
             class="form-control validate-input"
             type="url"
             name="website"
-            required
           />
           <small class="error" aria-live="polite"></small>
         </div>
